@@ -27,6 +27,11 @@ public abstract class GameEventListener implements Serializable
         // nothing
     }
 
+    public void onReturnToEarth(World world)
+    {
+        // nothing
+    }
+
     /**
      * Returns false if this event will never happen again and should be disposed
      */
